manifests/manifests-ping/statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-ping-pong-stset
spec:
  serviceName: postgres-ping-pong-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres-pingpong-app
  template:
    metadata:
      labels:
        app: postgres-pingpong-app
    spec:
      containers:
      - name: postgres
        image: postgres:15.7-bullseye
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-pingpong-persistent-storage
          mountPath: /var/lib/postgresql/data
          subPath: postgres
  volumeClaimTemplates:
  - metadata:
      name: postgres-pingpong-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard-rwo
      volumeMode: Filesystem
      resources:
        requests:
          storage: 1Gi
