manifests/manifests-ping/postgresservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-ping-pong-svc
  labels:
    app: postgres-pingpong-app
spec:
  ports:
  - port: 5432
    name: web
  clusterIP: None
  selector:
    app: postgres-pingpong-app
