manifests/manifests-ping/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: NodePort # This should be the only unfamiliar part
  selector:
    app: ping-pong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
